# django-container-manager

./: .coverage  .gitignore  API.md  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  INSTALL.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  Makefile  README.md  TROUBLESHOOTING.md  VIBE_CODING.md  db.sqlite3  db.sqlite3.backup  main.py  manage.py  pyproject.toml  simple_test.py  test_package_installation.py
.claude/agents/: copywriter_subagent.md  greybeard-subagent.md  guilfoyle-subagent.md
.github/: TRUSTED_PUBLISHING_SETUP.md
.github/workflows/: publish.yml
container_manager/: __init__.py  admin.py  bulk_operations.py  defaults.py  docker_service.py  exceptions.py  models.py  queue.py  retry.py  services.py  settings_fallback.py  signals.py  tests.py
container_manager/executors/: __init__.py  base.py  cloudrun.py  docker.py  exceptions.py  factory.py  fallback.py  mock.py
container_manager/management/commands/: cleanup_containers.py  create_sample_data.py  manage_container_job.py  process_container_jobs.py
container_manager/migrations/: 0001_initial.py  0002_alter_containerjob_container_id.py  0002_containerjob_clean_output_and_more.py  0003_dockerhost_auto_pull_images.py  0003_merge_template_into_job.py  0004_containerexecution_clean_output_and_more.py  0004_remove_routing_models.py  0005_add_multi_executor_support.py  0005_remove_routing_reason_field.py  0006_add_routing_models.py  0006_remove_network_assignment_model.py  0007_add_cost_tracking.py  0007_refactor_containerjob_environment_variables.py  0008_add_performance_monitoring.py  0008_remove_containertemplate.py  0009_create_migration_models.py  0009_remove_redundant_executor_fields.py  0010_remove_fallback_fields.py  0010_simplify_models_add_weight.py  0011_add_environment_variables_text.py  0011_remove_container_id_field.py  0012_remove_environment_variable_model.py  0013_add_environment_variable_template.py  0014_add_missing_test_fields.py  0015_add_last_health_check_field.py  0016_add_unified_execution_id.py  0017_rename_dockerhost_to_executorhost.py
container_manager/static/container_manager/js/: admin.js
container_manager/templates/admin/: base.html  cost_report.html
container_manager/templates/admin/container_manager/containerjob/: change_list.html
container_manager/tests/: __init__.py  test_admin_bulk_actions_simple.py  test_admin_queue_actions.py  test_admin_queue_display.py  test_base_executor.py  test_bulk_operations.py  test_cleanup_containers_command.py  test_cloudrun_executor.py  test_cloudrun_executor_mocked.py  test_concurrency.py  test_create_sample_data_command.py  test_docker_executor.py  test_docker_service.py  test_factory.py  test_fallback.py  test_graceful_shutdown.py  test_job_service_integration.py  test_manage_container_job_command.py  test_management_commands.py  test_mock_executor.py  test_models_and_integration.py  test_models_business_logic.py  test_models_core.py  test_process_container_jobs_simple.py  test_queue_command.py  test_queue_core.py  test_queue_retry_logic.py  test_services.py  test_services_core.py  test_simple_factory.py  test_state_machine.py  test_state_machine_core.py
demo_workflows/: apps.py
django_docker_manager/: asgi.py  settings.py  urls.py  wsgi.py
docs/: README.md  admin.md  api.md  commands.md  configuration.md  deployment.md  docker-hosts.md  installation.md  job-creation-guide.md  jobs.md  monitoring.md  multi-cloud-setup.md  templates.md
integration_test/integration_env/: pyvenv.cfg
integration_test/testproject/: test_settings.py
integration_test/testproject/testproject/: settings.py
specs/: concurrent_worker_safety.md  django_package_conversion.md  monitoring_specs.md  multi_cloud_container_execution.md
tasks/: 001_create_executor_interface.md  002_refactor_docker_service.md  003_enhance_data_models.md  004_create_executor_factory.md  005_update_management_commands.md  006_implement_mock_executor.md  007_implement_cloudrun_executor.md  008_add_routing_rules.md  009_add_cost_tracking.md  010_enhance_admin_interface.md  011_add_fallback_logic.md  012_implement_bulk_operations.md  013_add_performance_monitoring.md  014_create_migration_tools.md  015_add_integration_tests.md  016_update_documentation.md  017_create_deployment_guide.md  018_add_troubleshooting_guide.md  019_performance_optimization.md  01_demo-project-overview.md  020_prepare_library_extraction.md  02_demo-project-setup.md  03_demo-workflows-specification.md  04_docker-configuration.md  05_web-interface-requirements.md  06_implementation-tasks.md  07_technical-decisions.md  09_django-container-manager-queue-rfc.md  complexity-analysis.md  complexity-phase2-major-refactors.md  complexity-phase2-quick-wins.md  complexity-phase2-validation.md  coverage-base-executor.md  coverage-bulk-operations.md  coverage-cloudrun-executor.md  coverage-defaults-settings.md  coverage-docker-executor.md  coverage-docker-service.md  coverage-executor-factory.md  coverage-executor-testing.md  (+17 more)
tasks/completed/: docs-api-reference.md  docs-contributing-updates.md  docs-docker-integration.md  docs-install-guide.md  docs-management-commands.md  docs-model-docstrings.md  docs-readme-enhancement.md  docs-troubleshooting.md
tasks/queue-implementation/: 01-queue-model-fields.md  02-state-machine-validation.md  03-database-migration.md  04-queue-manager-basic.md  05-concurrency-control.md  06-retry-logic.md  07-queue-mode-command.md  08-graceful-shutdown.md  09-admin-queue-display.md  10-admin-queue-actions.md  11-state-machine-tests.md  12-concurrency-tests.md  13-queue-operations-tests.md  14-api-documentation.md  15-usage-examples.md  README.md
